# pyShapeDTW

./: .gitignore  README.md  demo.ipynb  pyproject.toml
pyshapeDTW/: __main__.py
pyshapeDTW/data/: available_datasets.errors.txt  available_datasets.txt  available_datasets_below1Mpoints.txt  todo_datasets.csv  todo_datasets_extended.csv  ucr.py  ucr_datasets.txt
pyshapeDTW/demo/: demo.ipynb
pyshapeDTW/descriptors/: base.py  hog1d.py  paa.py  slope.py  wavelets.py
pyshapeDTW/elastic_measure/: base_dtw.py  derivative_dtw.py  shape_dtw.py  warping.py
pyshapeDTW/evaluation/: alignment.py  classification.py  plots.py
pyshapeDTW/simulation/: transforms.py
pyshapeDTW/visualization/: plots.py
tests/: conftest.py  test_alignment.py  test_classification.py  test_derivative_dtw.py  test_descriptors.py  test_dtw.py  test_hog1d.py  test_paa.py  test_shape_dtw.py  test_simulation.py  test_slope.py  test_ucr.py  test_warping.py  test_wavelets.py
